--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doreen's Playground</title>
-    <link rel="shortcut icon" href="../public/res/favicon.ico" type="image/x-icon">
+    <title>dusk</title>
+    <link rel="shortcut icon" href="../public/res/logo/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../public/styles/root.css">
     <link rel="stylesheet" href="../public/styles/auth.css">
     <script src="../public/scripts/auth.js" defer></script>
@@ -26,8 +26,8 @@
                 </div>
 
                 <div class="flex-column w100">
-                    <div class="logo fit-image"><img src="../public/res/cards images/aces.png" alt=""></div>
-                    <h2 class="title">Doreen's Playground</h2>
+                    <div class="logo fit-image"><img src="../public/res/logo/dusk_black.svg" alt=""></div>
+                    <h2 class="title">dusk</h2>
                 </div>
 
                 <div class="flex-column w100">
