--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,7 +8,7 @@
     <title>
         <%=user.username%>
     </title>
-    <link rel="shortcut icon" href="../public/res/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../public/res/logo/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../public/styles/root.css">
     <link rel="stylesheet" href="../public/styles/profile.css">
     <script src="../public/scripts/profile.js" defer></script>
