--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Romaneasca</title>
-    <link rel="shortcut icon" href="../../public/res/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../public/res/logo/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../../public/styles/root.css">
     <link rel="stylesheet" href="../../public/styles/romaneasca.css">
     <script src="/socket.io/socket.io.js" defer></script>
