--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -51,10 +51,7 @@
                 </div>
             </div>
         </div>
-        <div class="notifications">
-            
-        </div>
+        <div class="notifications"></div>
     </main>
-
 </body>
 </html>
