--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -14,7 +14,8 @@
 </head>
 
 <body class="flex-column">
-    <data id="data" code="<%=game.code%>" sound="<%=user.sound%>" class="hidden"></data>
+    <data id="data" code="<%=game.code%>" sound="<%=user.sound%>" pictures="<%=user.pictures%>" class="hidden"></data>
+
     <audio class="hidden" id="clockTick" src="../../public/res/sounds/tick.wav"></audio>
     <audio class="hidden" id="whoosh1" src="../../public/res/sounds/whoosh1.mp3"></audio>
     <audio class="hidden" id="whoosh2" src="../../public/res/sounds/whoosh2.mp3"></audio>
