--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -11,8 +11,9 @@
     <script src="../public/scripts/lobby.js" defer></script>
 </head>
 <body class="flex-column">
+    <data id="data" name="<%=game.name%>" short="<%=game.short%>" class="hidden"></data>
+
     <%-include('partials/header'), user%>
-    
     <div class="title flex-column w100">
         <img src="../public/res/cards images/aces.png" alt="">
         <h1><%=game.name%></h1>
