--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -8,6 +8,7 @@
     <title>Romaneasca</title>
     <link rel="shortcut icon" href="../../public/res/logo/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../../public/styles/root.css">
+    <link rel="stylesheet" href="../../public/styles/game.css">
     <link rel="stylesheet" href="../../public/styles/romaneasca.css">
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="../../public/scripts/romaneasca.js" defer></script>
