--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -1,3 +1,12 @@
+body {
+    min-height: 100vh;
+    background: radial-gradient(circle, var(--gray), var(--black));
+}
+
+body header.flex-row{
+    position: static ;
+}
+
 
 .chat {
     position: fixed;
