--- a/public/styles/romaneasca.css
+++ b/public/styles/romaneasca.css
@@ -1,8 +1,3 @@
-body {
-    min-height: 100vh;
-    background: radial-gradient(circle, var(--gray), var(--black));
-}
-
 #waiting-screen {
     background-color: var(--black);
     position: absolute;
@@ -13,17 +8,14 @@ body {
     padding: 2rem 0;
     color: var(--white);
 }
-
 #waiting-screen .players {
     flex-wrap: wrap;
     background-color: var(--dark);
     border-radius: 1rem;
 }
-
 #waiting-screen .player {
     margin: 1rem;
 }
-
 #waiting-screen .player .image {
     height: 3rem;
     aspect-ratio: 1/1;
@@ -32,28 +24,23 @@ body {
     border: solid 0.1rem var(--light);
     margin-right: 0.5rem;
 }
-
 #waiting-screen .player .image img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
-
 #waiting-screen .player .username {
     font-size: 1.25rem;
 }
-
 #waiting-screen .title {
     margin: 2rem 0;
     font-size: 2rem;
 }
-
 #waiting-screen .choose-team {
     width: min(40rem, 98%);
     padding: 0.5rem;
     border-radius: 1rem;
 }
-
 #waiting-screen .choose-team .team {
     box-sizing: border-box;
     margin: 0 2rem;
@@ -174,9 +161,6 @@ main {
 main img {
     user-select: none;
     -webkit-user-drag: none
-}
-body header.flex-row{
-    position: static ;
 }
 section.top {
     margin: 0.5rem 0;
@@ -443,6 +427,11 @@ section.bottom .give-up{
     align-self: flex-end;
     margin: 0.5rem;
     margin-right: 5%;
+    filter: drop-shadow(var(--second) 0 0 1px);
+    transition: all 0.2s ease;
+}
+section.bottom .give-up:hover{
+    filter: drop-shadow(var(--second) 0 0 3px);
 }
 #ending-screen{
     display: none;
