--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -15,7 +15,7 @@
 
     <%-include('partials/header'), user%>
     <div class="title flex-column w100">
-        <img src="../public/res/cards images/aces.png" alt="">
+        <img src="../public/res/logo/dusk.svg" alt="">
         <h1><%=game.name%></h1>
     </div>
 
