--- a/views/septica.ejs
+++ b/views/septica.ejs
@@ -69,16 +69,16 @@
                         <img src="../../public/res/cards/C2.png" alt="">
                     </div></div>
                     <div class="card-slot flex-row"><div class="card">
-                        <img src="../../public/res/cards/C2.png" alt="">
+                        <img src="../../public/res/cards/H2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/D2.png" alt="">
                     </div></div>
                     <div class="card-slot flex-row"><div class="card">
                         <img src="../../public/res/cards/C2.png" alt="">
                     </div></div>
-                    <div class="card-slot flex-row"><div class="card">
-                        <img src="../../public/res/cards/C2.png" alt="">
-                    </div></div>
-                    <div class="card-slot flex-row"><div class="card">
-                        <img src="../../public/res/cards/C2.png" alt="">
+                    <div class="card-slot flex-row"><div class="card gray">
+                        <img src="../../public/res/cards/D2.png" alt="">
                     </div></div>
                     <div class="card-slot flex-row"><div class="card">
                         <img src="../../public/res/cards/C2.png" alt="">
@@ -95,8 +95,8 @@
             </aside>
         </section>
         <section class="bottom flex-row w100">
-            <div></div>
-            <div></div>
+            <div class="chat-space"></div>
+            <div class="hand"></div>
             <div class="give-up flex-column fit-image" title="Give-up">
                 <img src="../../public/res/images/give-up.svg" alt="">
             </div>
