--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -2,29 +2,21 @@ body {
     min-height: 100vh;
     background: radial-gradient(circle, var(--gray), var(--black));
 }
-
 body header.flex-row{
     position: static ;
 }
+
+section.top .sound{
+    order: 1;
+}
+section.top .sound > div{
+    height: 2rem;
+    width: 2rem;
+    cursor: pointer;
+}
+
 .gray{
-    filter: grayscale(1) blur(0.5px) contrast(1);
-}
-.locked{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-.locked img{
-    filter: grayscale(1) blur(1px);
-}
-.locked::after{
-    content: url('../res/images/lock.svg');
-    position: absolute;
-    width: 75%;
-    aspect-ratio: 1/1;
-    object-fit: contain;
+    filter: grayscale(1) blur(0.5px);
 }
 .chat {
     position: fixed;
@@ -90,4 +82,19 @@ body header.flex-row{
 .chat form .send{
     height: 1.5rem;
     width: 1.5rem;
+}
+
+.glowing {
+    animation: glow 1s ease infinite;
+}
+@keyframes glow {
+    0% {
+        box-shadow: 0 0 1rem 0 var(--main);
+    }
+    50% {
+        box-shadow: 0 0 0 0 var(--main);
+    }
+    100% {
+        box-shadow: 0 0 1rem 0 var(--main);
+    }
 }
