--- a/public/styles/septica.css
+++ b/public/styles/septica.css
@@ -8,7 +8,6 @@
     padding: 2rem 0;
     color: var(--white);
     padding-left: 5%;
-    display: none;
 }
 #waiting-screen .container{
     width: min(30rem, 90%);
@@ -81,6 +80,12 @@ main{
     width: 100%;
     color: var(--white);
 }
+main section.top{
+    padding: 1rem 0;
+}
+main .top > *{
+    margin: 0 0.5rem;
+}
 main section.center{
     justify-content: space-between;
     margin-top: 2rem;
@@ -91,16 +96,24 @@ main aside.players{
 }
 main aside.players .player{
     width: 100%;
-    justify-content: flex-start;
+    background-color: var(--dark);
+    margin: 0.5rem 0;
+    border-radius: 1rem;
 }
 main aside.players .player .cards{
     font-size: 1.5rem;
-    margin-left: 1rem;
+    margin-left: auto;
+    height: 3rem;
+    aspect-ratio: 2/3;
+    background-size: contain;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('../res/cards\ images/empty_card.png')
 }
 
 main aside.table{
     width: 50%;
-    align-items: stretch;
 }
 main .table .card{
     width: 100%;
@@ -127,7 +140,11 @@ main .cards .card img{
     width: 100%;
     height: 100%;
 }
-
+main .table .streak{
+    visibility: hidden;
+    margin-top: 1rem;
+    font-size: 1.5rem;
+}
 main aside.deck{
     width: 25%;
     justify-content: space-between;
@@ -141,17 +158,6 @@ main aside.deck .card img{
     height: 100%;
     width: 100%;
 }
-main aside.deck .draw-card{
-    margin: 2rem 0;
-    width: 6rem;
-    aspect-ratio: 1/1;
-    cursor: pointer;
-    filter: drop-shadow(var(--main) 0 0 1px);
-    transition: all 0.2s ease;
-}
-main aside.deck .draw-card:hover{
-    filter: drop-shadow(var(--main) 0 0 3px);
-}
 
 main .bottom{
     margin: 1rem 0; 
@@ -163,20 +169,23 @@ main .bottom .chat-space{
     width: 21rem;
 }
 main .bottom .hand{
-    height: 1rem;
     flex-grow: 1;
     flex-basis: 0;
-    background-color: red;
 }
-main .bottom .give-up{
+main .bottom .hand .cards{
+    justify-content: center;
+}
+main .bottom .draw-card{
     margin: 0 4rem;
-    height: 6rem;
+    width: 6rem;
+    aspect-ratio: 1/1;
     cursor: pointer;
+    filter: drop-shadow(var(--main) 0 0 1px);
     transition: all 0.2s ease;
 }
-main .bottom .give-up.gray{
-    filter: grayscale(1) contrast(0);
+main .bottom .draw-card:hover{
+    filter: drop-shadow(var(--main) 0 0 3px);
 }
-main .bottom .give-up:hover{
-    filter: drop-shadow(var(--second) 0 0 3px);
+main .bottom .draw-card.gray{
+    filter: grayscale(1) contrast(0) brightness(0.75);
 }
