--- a/views/septica.ejs
+++ b/views/septica.ejs
@@ -38,7 +38,13 @@
 
     <main class="flex-column">
         <section class="top flex-row">
-
+            <div class="sound">
+                <div class="sound-on <% if(user.sound == 0){%>hidden<%}%>" onclick="turnOffSound()"><img
+                        src="../../public/res/UI/sound.svg" alt=""></div>
+                <div class="sound-off <% if(user.sound == 1){%>hidden<%}%>" onclick="turnOnSound()"><img
+                        src="../../public/res/UI/mute.svg" alt=""></div>
+            </div>
+            <%-include('partials/timer.ejs')%>
         </section>
         <section class="center flex-row w100">
             <aside class="players">
@@ -55,7 +61,7 @@
                 <div class="player flex-row">
                     <div class="avatar fill-image"><img src="../../public/data/avatars/nicu.jpg" alt=""></div>
                     <div class="username">NICU</div>
-                    <div class="cards"> 5 </div>
+                    <div class="cards"> 25 </div>
                 </div>
                 <div class="player flex-row">
                     <div class="avatar fill-image"><img src="../../public/data/avatars/nicu.jpg" alt=""></div>
@@ -63,7 +69,7 @@
                     <div class="cards"> 5 </div>
                 </div>
             </aside>
-            <aside class="table flex-row">
+            <aside class="table flex-column">
                 <div class="cards flex-row">
                     <div class="card-slot flex-row"><div class="card">
                         <img src="../../public/res/cards/C2.png" alt="">
@@ -77,28 +83,86 @@
                     <div class="card-slot flex-row"><div class="card">
                         <img src="../../public/res/cards/C2.png" alt="">
                     </div></div>
-                    <div class="card-slot flex-row"><div class="card gray">
+                    <div class="card-slot flex-row"><div class="card">
                         <img src="../../public/res/cards/D2.png" alt="">
                     </div></div>
                     <div class="card-slot flex-row"><div class="card">
                         <img src="../../public/res/cards/C2.png" alt="">
                     </div></div>
                 </div>
+                <div class="streak">
+                    Streak: 0
+                </div>
             </aside>
             <aside class="deck flex-column">
                 <div class="card">
                     <img src="../../public/res/cards/00.png" alt="">
                 </div>
-                <div class="draw-card">
-                    <img class="w100 h100" src="../../public/res/images/draw-card.svg" alt="">
-                </div>
+                
             </aside>
         </section>
         <section class="bottom flex-row w100">
             <div class="chat-space"></div>
-            <div class="hand"></div>
-            <div class="give-up flex-column fit-image" title="Give-up">
-                <img src="../../public/res/images/give-up.svg" alt="">
+            <div class="hand">
+                <div class="cards flex-row">
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/C2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/H2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/D2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/C2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/D2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/C2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/C2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/H2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/D2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/C2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/D2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/C2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/C2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/H2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/D2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/C2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/D2.png" alt="">
+                    </div></div>
+                    <div class="card-slot flex-row"><div class="card">
+                        <img src="../../public/res/cards/C2.png" alt="">
+                    </div></div>
+                </div>
+            </div>
+            <div class="draw-card gray">
+                <img class="w100 h100" src="../../public/res/images/draw-card.svg" alt="">
             </div>
         </section>
     </main>
