--- a/public/styles/septica.css
+++ b/public/styles/septica.css
@@ -96,9 +96,11 @@ main aside.players{
 }
 main aside.players .player{
     width: 100%;
-    background-color: var(--dark);
     margin: 0.5rem 0;
     border-radius: 1rem;
+}
+main aside.players .player.gray{
+    filter: grayscale(1);
 }
 main aside.players .player .cards{
     font-size: 1.5rem;
