--- a/public/styles/septica.css
+++ b/public/styles/septica.css
@@ -106,8 +106,10 @@ main aside.players .player .cards{
     font-size: 1.5rem;
     margin-left: auto;
     height: 3rem;
-    aspect-ratio: 2/3;
+    aspect-ratio: 1/1;
     background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -190,4 +192,65 @@ main .bottom .draw-card:hover{
 }
 main .bottom .draw-card.gray{
     filter: grayscale(1) contrast(0) brightness(0.75);
+}
+
+#end-screen{
+    color: var(--white);
+    display:  none;
+    position: fixed;
+    z-index: 11;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--black);
+    justify-content:  center;
+}
+#end-screen .leaderboard{
+    padding: 1rem;
+    background-color: var(--dark);
+    width: min(98%, 30rem);
+}
+#end-screen .players{
+    width: 100%;
+    align-items: flex-start;
+    margin: 2rem 0;
+}
+#end-screen .players .player:hover{
+    background-color: var(--black);
+}
+#end-screen .message span{
+    color: var(--warning);
+    margin-left: .25rem;
+}
+
+#choose-suit{
+    position: absolute;
+    z-index: 10;
+    top: -11rem;
+    transform: rotate(45deg);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 0.5rem;
+}
+#choose-suit .suit{
+    width: 4rem;
+    aspect-ratio: 1/1;
+    background-color: var(--dark);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor:  pointer;
+    border-radius: 0.5rem;
+    transition: all 0.2s ease;
+}
+#choose-suit .suit:hover{
+    box-shadow: 0 0 0.5rem 0 var(--main);
+}
+#choose-suit .suit img{
+    width: 60%;
+    aspect-ratio: 1/1;
+    object-fit: contain;
+    transform: rotate(-45deg);
 }
