--- a/views/septica.ejs
+++ b/views/septica.ejs
@@ -66,16 +66,16 @@
         </section>
         <section class="bottom flex-row w100">
             <div id="choose-suit">
-                <div class="club suit" onclick="playCard7()">
+                <div class="club suit" suit='C' onclick="playCard7('C')">
                     <img src="../../public/res/images/club.svg" alt="">
                 </div>
-                <div class="diamond suit">
+                <div class="diamond suit" suit='D'  onclick="playCard7('D')">
                     <img src="../../public/res/images/diamond.svg" alt="">
                 </div>
-                <div class="heart suit">
+                <div class="heart suit" suit='H'  onclick="playCard7('H')">
                     <img src="../../public/res/images/heart.svg" alt="">
                 </div>
-                <div class="spade suit">
+                <div class="spade suit" suit='S'  onclick="playCard7('S')">
                     <img src="../../public/res/images/spade.svg" alt="">
                 </div>
             </div>
