--- a/views/septica.ejs
+++ b/views/septica.ejs
@@ -83,8 +83,13 @@
             <div class="hand">
                 <div class="cards flex-row"></div>
             </div>
-            <div class="draw-card gray" onclick="drawCard()">
-                <img class="w100 h100" src="../../public/res/images/draw-card.svg" alt="">
+            <div class="right">
+                <div class="draw-card gray" onclick="drawCard()" title="Draw Card">
+                    <img class="w100 h100" src="../../public/res/images/draw-card.svg" alt="">
+                </div>
+                <div class="give-up gray" onclick="giveUp()" title="Give Up">
+                    <img class="w100 h100" src="../../public/res/images/give-up.svg" alt="">
+                </div>
             </div>
         </section>
     </main>
